--- a/Export-db-dic/src/main/resources/application.properties
+++ b/Export-db-dic/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/information_schema?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false
+#spring.datasource.url=jdbc:mysql://47.92.27.2:3306/information_schema?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
+#spring.datasource.username=posp_test
+#spring.datasource.password=posp_test
 
 server.port=8079
